--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@octokit/core": "^3.2.4",
     "core-js": "^3.6.5",
+    "highlight.js": "^9.18.1",
+    "ngx-highlightjs": "^4.1.0",
     "vue": "^2.6.11",
-    "vue-code-highlight": "^0.7.6",
+    "vue-highlight.js": "^3.1.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
