--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "core-js": "^3.6.5",
     "custom-env": "^2.0.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "highlight.js": "^9.18.1",
     "ngx-highlightjs": "^4.1.0",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-highlight.js": "^3.1.0",
     "vue-router": "^3.2.0",
