--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@octokit/core": "^3.2.4",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "custom-env": "^2.0.1",
     "dotenv": "^8.2.0",
